add in the nav element for the navigation bar and add in styles for the nav bar and the list elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="assets/favicon/6577950_console_controller_gamer_gaming_joystick_icon (1).png"
+            <a href="index.html"><img src="assets/favicon/Preview.png"
                     alt="Gaming joystick logo which takes you back to homepage"></a>
             <div class="navigation-links">
                 <ul>
