--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <header>
     <section class="header">
         <nav>
             <a href="index.html"><img src="assets/favicon/Preview.png"
@@ -30,8 +31,14 @@
                 </ul>
             </div>
         </nav>
+        <div class="text">
+            <h1>STAFFORD GAMING CLUB</h1>
+            <p>Welcome to our offcial website for the Stafford Gaming Club!</p>
+            <a href="">Come and visit us to know more!</a>
+        </div>
 
     </section>
+    </header>
 
 </body>
 
