add in a button class for the a element and add styles in such as hover over, a pointer cursor, transparent backround and colors which match other hover elements

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
         <div class="text">
             <h1>STAFFORD GAMING CLUB</h1>
-            <p>Welcome to our offcial website for the Stafford Gaming Club!</p>
-            <a href="">Come and visit us to know more!</a>
+            <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>, you're in the right place!</p>
+            <a href="" class="button"><strong>COME AND VISIT US TO KNOW MORE!</strong></a>
         </div>
 
     </section>
