add in media query for smaller screens (mobile phones) and add in icons for the navigation bar

--- a/index.html
+++ b/index.html
@@ -18,28 +18,31 @@
 
 <body>
     <header>
-    <section class="header">
-        <nav>
-            <a href="index.html"><img src="assets/favicon/Preview.png"
-                    alt="Gaming joystick logo which takes you back to homepage"></a>
-            <div class="navigation-links">
-                <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">EVENTS</a></li>
-                    <li><a href="">CONTACT US</a></li>
-                </ul>
+        <section class="header">
+            <nav>
+                <a href="index.html"><img src="assets/favicon/Preview.png"
+                        alt="Gaming joystick logo which takes you back to homepage"></a>
+                <div class="navigation-links">
+                    <i class="fa-solid fa-xmark"></i>
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">EVENTS</a></li>
+                        <li><a href="">CONTACT US</a></li>
+                    </ul>
+                </div>
+                <i class="fa-solid fa-bars"></i>
+            </nav>
+            <div class="text">
+                <h1>STAFFORD GAMING CLUB</h1>
+                <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>,
+                    you're in the right place!</p>
+                <a href="" class="button"><strong>COME AND VISIT US TO KNOW MORE!</strong></a>
             </div>
-        </nav>
-        <div class="text">
-            <h1>STAFFORD GAMING CLUB</h1>
-            <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>, you're in the right place!</p>
-            <a href="" class="button"><strong>COME AND VISIT US TO KNOW MORE!</strong></a>
-        </div>
 
-    </section>
+        </section>
     </header>
-
+    <script src="https://kit.fontawesome.com/950acdf4f6.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
