--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon/1055053_controller_game controller_video game_icon (2).png">
+    <!-- Link to fontawesome 4 cdn -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-    awesome.min.css" rel="stylesheet">
     <!-- Title -->
     <title>Stafford Gaming Club</title>
 </head>
@@ -23,7 +25,7 @@
                 <a href="index.html"><img src="assets/favicon/Preview.png"
                         alt="Gaming joystick logo which takes you back to homepage"></a>
                 <div class="navigation-links">
-                    <i class="fa-solid fa-xmark"></i>
+                    <i class="fa fa-times"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -31,8 +33,9 @@
                         <li><a href="">CONTACT US</a></li>
                     </ul>
                 </div>
-                <i class="fa-solid fa-bars"></i>
-            </nav>
+                <i class="fa fa-bars"></i>
+                
+                </nav>
             <div class="text">
                 <h1>STAFFORD GAMING CLUB</h1>
                 <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>,
