add in main content for the about us page and add in styles to make sure it fits the page into columns and has the same color as other padding/box elements on the webpage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <i class="fa fa-bars"></i>
                 
-                </nav>
+            </nav>
             <div class="text">
                 <h1>STAFFORD GAMING CLUB</h1>
                 <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>,
@@ -45,6 +45,32 @@
 
         </section>
     </header>
+    <!-- Main Content -->
+        <section class="about">
+            <h1>About Us</h1>
+            <p>We are a community of gamers who have created this little club for the likes of people who have love and respect for gaming, be that individual or communal!<br> We offer a space to be among people who are passionate about gaming, if that be Playstation, Xbox, PC Gaming, Switch, hell we even have something for a <strong>GAMEBOY.</strong><br> We also have compettitive gaming events which range from FPS games, RPG tabletop style games and even board games like D&D and Warhammer 40k.<br> If you feel like this club is for you please head to our contact area and send us an email!</p>
+        <div class="row">
+            <div class="about-column">
+                <h3>Console Gaming</h3>
+                <p>Tournaments: Competitive play in popular games like "FIFA," "Call of Duty," or "Super Smash Bros." Participants are often divided into brackets, and winners progress until a champion is crowned.
+                </p>
+            </div>
+            <div class="about-column">
+                <h3>PC Gaming</h3>
+                <p>Participants may compete in popular esports titles like "League of Legends," "Counter-Strike: Global Offensive," or "Dota 2," often in structured tournaments with brackets and prizes. The atmosphere is charged with excitement, as players strategize and communicate in real-time, supported by robust network infrastructure to ensure lag-free gameplay.
+
+                </p>
+            </div>
+            <div class="about-column">
+                <h3>Strategy and Board games</h3>
+                <p>Board Games Bonanza is a full-day event dedicated to board game enthusiasts of all ages and skill levels. The event features a diverse range of board games, from classic favorites like Monopoly and Scrabble to modern hits like Catan and Ticket to Ride. Attendees can explore various themed zones, participate in tournaments, and join in on collaborative mega-games.</p>
+            </div>
+            
+        </div>    
+
+        </section>
+
+    </main>
     <script src="https://kit.fontawesome.com/950acdf4f6.js" crossorigin="anonymous"></script>
 </body>
 
