add in a flex direction to be in columns in the media query for mobile phones so the text is aligned in the middle of the screen and is seen in columns

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <div class="about-column">
-                <h3>Strategy and Board games</h3>
+                <h3>Board games</h3>
                 <p>Board Games Bonanza is a full-day event dedicated to board game enthusiasts of all ages and skill levels. The event features a diverse range of board games, from classic favorites like Monopoly and Scrabble to modern hits like Catan and Ticket to Ride. Attendees can explore various themed zones, participate in tournaments, and join in on collaborative mega-games.</p>
             </div>
             
