add the main header for the events section of the page, add in some styles for the events section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="header">
             <nav>
                 <a href="index.html"><img src="assets/favicon/Preview.png"
-                        alt="Gaming joystick logo which takes you back to homepage"></a>
+                        alt="logo which takes you back to homepage"></a>
                 <div class="navigation-links">
                     <i class="fa fa-times"></i>
                     <ul>
@@ -40,7 +40,7 @@
                 <h1>STAFFORD GAMING CLUB</h1>
                 <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>,
                     you're in the right place!</p>
-                <a href="" class="button"><strong>COME AND VISIT US TO KNOW MORE!</strong></a>
+                <a href="https://www.facebook.com/?locale=en_GB" class="button"><strong>COME VISIT OUR FACEBOOK PAGE TO KNOW MORE!</strong></a>
             </div>
 
         </section>
@@ -69,6 +69,13 @@
         </div>    
 
         </section>
+    <!-- Events -->
+     <section class="events">
+        <h1>Events</h1>
+        <p>We hold events at our gaming club 3 days a week, one day per week for either Console gaming, PC gaming or Board games!</p>
+
+     </section>
+
 
     </main>
     <script src="https://kit.fontawesome.com/950acdf4f6.js" crossorigin="anonymous"></script>
