add in the section for events which include the dates and times a brief description on what we do at the events

--- a/index.html
+++ b/index.html
@@ -34,47 +34,81 @@
                     </ul>
                 </div>
                 <i class="fa fa-bars"></i>
-                
+
             </nav>
             <div class="text">
                 <h1>STAFFORD GAMING CLUB</h1>
                 <p>Welcome to our offcial website for the Stafford Gaming Club.<br>If you are a <strong>GAMER</strong>,
                     you're in the right place!</p>
-                <a href="https://www.facebook.com/?locale=en_GB" class="button"><strong>COME VISIT OUR FACEBOOK PAGE TO KNOW MORE!</strong></a>
+                <a href="https://www.facebook.com/?locale=en_GB" class="button"><strong>COME VISIT OUR FACEBOOK PAGE TO
+                        KNOW MORE!</strong></a>
             </div>
 
         </section>
     </header>
     <!-- Main Content -->
-        <section class="about">
-            <h1>About Us</h1>
-            <p>We are a community of gamers who have created this little club for the likes of people who have love and respect for gaming, be that individual or communal!<br> We offer a space to be among people who are passionate about gaming, if that be Playstation, Xbox, PC Gaming, Switch, hell we even have something for a <strong>GAMEBOY.</strong><br> We also have compettitive gaming events which range from FPS games, RPG tabletop style games and even board games like D&D and Warhammer 40k.<br> If you feel like this club is for you please head to our contact area and send us an email!</p>
+    <section class="about">
+        <h1>About Us</h1>
+        <p>We are a community of gamers who have created this little club for the likes of people who have love and
+            respect for gaming, be that individual or communal!<br> We offer a space to be among people who are
+            passionate about gaming, if that be Playstation, Xbox, PC Gaming, Switch, hell we even have something for a
+            <strong>GAMEBOY.</strong><br> We also have compettitive gaming events which range from FPS games, RPG
+            tabletop style games and even board games like D&D and Warhammer 40k.<br> If you feel like this club is for
+            you please head to our contact area and send us an email!</p>
         <div class="row">
             <div class="about-column">
                 <h3>Console Gaming</h3>
-                <p>Tournaments: Competitive play in popular games like "FIFA," "Call of Duty," or "Super Smash Bros." Participants are often divided into brackets, and winners progress until a champion is crowned.
+                <p>Tournaments: Competitive play in popular games like "FIFA," "Call of Duty," or "Super Smash Bros."
+                    Participants are often divided into brackets, and winners progress until a champion is crowned.
                 </p>
             </div>
             <div class="about-column">
                 <h3>PC Gaming</h3>
-                <p>Participants may compete in popular esports titles like "League of Legends," "Counter-Strike: Global Offensive," or "Dota 2," often in structured tournaments with brackets and prizes. The atmosphere is charged with excitement, as players strategize and communicate in real-time, supported by robust network infrastructure to ensure lag-free gameplay.
+                <p>Participants may compete in popular esports titles like "League of Legends," "Counter-Strike: Global
+                    Offensive," or "Dota 2," often in structured tournaments with brackets and prizes. The atmosphere is
+                    charged with excitement, as players strategize and communicate in real-time, supported by robust
+                    network infrastructure to ensure lag-free gameplay.
 
                 </p>
             </div>
             <div class="about-column">
                 <h3>Board games</h3>
-                <p>Board Games Bonanza is a full-day event dedicated to board game enthusiasts of all ages and skill levels. The event features a diverse range of board games, from classic favorites like Monopoly and Scrabble to modern hits like Catan and Ticket to Ride. Attendees can explore various themed zones, participate in tournaments, and join in on collaborative mega-games.</p>
+                <p>Board Games Bonanza is a full-day event dedicated to board game enthusiasts of all ages and skill
+                    levels. The event features a diverse range of board games, from classic favorites like Monopoly and
+                    Scrabble to modern hits like Catan and Ticket to Ride. Attendees can explore various themed zones,
+                    participate in tournaments, and join in on collaborative mega-games.</p>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- Events -->
+    <section class="events">
+        <h1>Events</h1>
+        <p>We hold events at our gaming club 3 days a week, one day per week for either Console gaming, PC gaming or
+            Board games!</p>
+        <div class="row">
+            <div class="events-column">
+                <h3>CONSOLE GAMING EVENT</h3>
+                <p>FRIDAYS<br>17.30pm-21.30pm<br>Come on down for a Console Gaming Session, we have casual gaming and also <strong>COMPETTITIONS!</strong></p>
+                <p>The console gaming event is a vibrant gathering of gamers, featuring competitions on the latest consoles, exclusive game previews, and developer panels. Attendees enjoyed hands-on gameplay, merchandise giveaways, and networking opportunities with fellow gaming <em>enthusiasts</em>.
+
+                </p>
+            </div>
+            <div class="events-column">
+                <h3>PC GAMING EVENT</h3>
+                <p>SATURDAYS<br>17.30pm-21.30pm<br>Come on down for a PC Gaming Session, we have casual gaming and also <strong>COMPETTITIONS!</strong></p>
+                <p>Our PC gaming events are a gathering where gamers and industry professionals come together to celebrate and experience the latest in PC gaming. These events often feature game demos and esports tournaments providing an immersive environment for <em>enthusiasts</em> explore new games, technology, and trends in the gaming industry.</p>
+            </div>
+            <div class="events-column">
+                <h3>BOARD GAMES EVENT</h3>
+                <p><br>17.30pm-21.30pm<br>Come on down for a Board Games Session, we have casual gaming and also <strong>COMPETTITIONS!</strong></p>
+                <p>Join us for an exciting evening of strategy, fun, and camaraderie at <strong>STAFFORD GAMING CLUB'S</strong> Board Games Meetup! Whether you're a seasoned player or new to the world of board games, there's something for everyone. We'll have a variety of games available, from classic favorites to modern hits. It's a great opportunity to relax, meet new people, and engage in friendly competition. Light refreshments will be provided, and feel free to bring your own favorite game to share with the group. See you there for a night of gaming <em>FUN!</em></p>
             </div>
             
-        </div>    
+        </div>
 
-        </section>
-    <!-- Events -->
-     <section class="events">
-        <h1>Events</h1>
-        <p>We hold events at our gaming club 3 days a week, one day per week for either Console gaming, PC gaming or Board games!</p>
-
-     </section>
+    </section>
 
 
     </main>
