fixed the naviagtion bar for the moble devices

--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
                 <a href="index.html"><img src="assets/favicon/Preview.png"
                         alt="logo which takes you back to homepage"></a>
                 <div class="navigation-links">
-                    <i class="fa fa-times"></i>
                     <ul>
-                        <li><a href="">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">EVENTS</a></li>
                         <li><a href="">CONTACT US</a></li>
                     </ul>
                 </div>
-                <i class="fa fa-bars"></i>
 
             </nav>
             <div class="text">
@@ -120,8 +118,24 @@
                 </div>
             </div>
         </section>
+        <!-- Contact us -->
+        <section class="contact">
+            <h1>CONTACT US VIA OUR <strong>FORM</strong>
+                <p>Contact us to get the details about our events and we can get you signed up!</p>
+                <div class="row">
+                    <div class="contact-column">
+
+                    </div>
+                </div>
+
+        </section>
     </main>
+    <link rel="script" href="script.html">
     <script src="https://kit.fontawesome.com/950acdf4f6.js" crossorigin="anonymous"></script>
+    <script>
+
+
+    </script>
 </body>
 
 </html>
