add in footer and footer styles

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
                     </div>
 
         </section>
+        <!-- Footer -->
+        <section>
+            <footer>
+                <div class="footer-content">
+                    <p>&copy; 2024 StaffordGamingClub.com All Rights Reserved.</p>
+                </div>
+
+            </footer>
+        </section>
     </main>
     <link rel="script" href="script.html">
     <script src="https://kit.fontawesome.com/950acdf4f6.js" crossorigin="anonymous"></script>
