Fix issue of spacing in the icon file name, which brought up errors in the markup validation service.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ This enhances accessibility for users and improves SEO by making the language ex
     Separating the content (HTML) from the design (CSS) promotes cleaner, more maintainable code.
     -->
 
-    <link rel="icon" href="assets/favicon/1055053_controller_game controller_video game_icon (2).png">
+    <link rel="icon" href="assets/favicon/gamecontrollericon.png">
     <!-- 
     Sets the favicon, a small icon displayed in the browser tab, helping users identify the website quickly when multiple tabs are open.
     The favicon also contributes to the visual branding of the site.
