Fix the issue of the closing tag on the <link> element as it had a / included in it, the link element being self closing, does not need the dash.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ This enhances accessibility for users and improves SEO by making the language ex
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
           integrity="sha512-v4AkvgiJ1Q7s1cZHPueJHfzV8lA7BlRMHC0xx6ZpIURm0dRx5pD9Zz2w31DLsFuGeCvV25TqT2MExG0bWupwGA==" 
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+          crossorigin="anonymous" referrerpolicy="no-referrer">
     <!-- 
     Includes FontAwesome, a popular icon library, via a CDN. 
     This allows for easy integration of high-quality icons throughout the webpage without needing to manually upload or create custom icons.
