Fix the action attribute and add in a form dump to the form

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ This enhances accessibility for users and improves SEO by making the language ex
                 A container that holds the form elements together, making it easier to style and position the form on the page.
                 -->
 
-                <form action="" method="POST" class="contact-form">
+                <form action="https://formdump.codeinstitute.net" method="POST" class="contact-form">
                     <!-- 
                     The form element allows users to submit their information. 
                     It uses the POST method for secure data submission.
