Add in target _blank for the facebook link so it opens in a new tab.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ This enhances accessibility for users and improves SEO by making the language ex
                 <p>Welcome to our official website for the Stafford Gaming Club.<br>
                     If you are a <strong>GAMER</strong>, you're in the right place!</p>
 
-                <a href="https://www.facebook.com/?locale=en_GB" class="button">
+                <a href="https://www.facebook.com/?locale=en_GB" class="button" target="_blank">
                     <strong>COME VISIT OUR FACEBOOK PAGE TO KNOW MORE!</strong>
                 </a>
                 <!-- 
@@ -230,7 +230,7 @@ This enhances accessibility for users and improves SEO by making the language ex
             -->
 
             <h1>CONTACT US VIA OUR <strong>FORM</strong></h1>
-            <p>Contact us to get the details about our events and we can get you signed up!</p>
+            <h2>Contact us to get the details about our events and we can get you signed up!</h2>
 
             <div class="container">
                 <!-- 
